--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -49,42 +50,45 @@
                                 <rect key="frame" x="20" y="107" width="560" height="464"/>
                                 <color key="backgroundColor" white="0.85061870805369133" alpha="0.22165948275862069" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="IZN-Nu-0eq">
-                                    <size key="itemSize" width="133" height="148"/>
+                                    <size key="itemSize" width="134" height="148"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="marvelCell" id="kZ7-rA-4y2" customClass="MarvelCell" customModule="MarvelDatabase" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="133" height="148"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="134" height="148"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="133" height="148"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="134" height="148"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Marvel_character_group-crop" translatesAutoresizingMaskIntoConstraints="NO" id="TTa-P2-Taw">
-                                                    <rect key="frame" x="8" y="8" width="117" height="123"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="IZe-cK-yao">
-                                                    <rect key="frame" x="8" y="131" width="117" height="17"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.69999999999999996" translatesAutoresizingMaskIntoConstraints="NO" id="IZe-cK-yao">
+                                                    <rect key="frame" x="8" y="121" width="117" height="19"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="17" id="Sxo-jN-mSw"/>
+                                                        <constraint firstAttribute="height" constant="19" id="pdI-Nu-74u"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marvel_character_group-crop" translatesAutoresizingMaskIntoConstraints="NO" id="TTa-P2-Taw">
+                                                    <rect key="frame" x="17" y="8" width="100" height="113"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="TTa-P2-Taw" secondAttribute="height" multiplier="100:113" id="idj-AY-u5A"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="IZe-cK-yao" firstAttribute="trailing" secondItem="kZ7-rA-4y2" secondAttribute="trailingMargin" id="4MY-QD-gpP"/>
-                                            <constraint firstItem="IZe-cK-yao" firstAttribute="leading" secondItem="kZ7-rA-4y2" secondAttribute="leadingMargin" id="7s1-r1-u0o"/>
-                                            <constraint firstItem="TTa-P2-Taw" firstAttribute="trailing" secondItem="kZ7-rA-4y2" secondAttribute="trailingMargin" id="GLO-9n-xnp"/>
-                                            <constraint firstItem="TTa-P2-Taw" firstAttribute="leading" secondItem="kZ7-rA-4y2" secondAttribute="leadingMargin" id="I0H-8s-jze"/>
-                                            <constraint firstItem="TTa-P2-Taw" firstAttribute="top" secondItem="kZ7-rA-4y2" secondAttribute="topMargin" id="aJT-h5-WRl"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="IZe-cK-yao" secondAttribute="bottom" constant="8" id="iXw-E4-j21"/>
-                                            <constraint firstItem="IZe-cK-yao" firstAttribute="top" secondItem="TTa-P2-Taw" secondAttribute="bottom" id="r6i-B9-a9F"/>
+                                            <constraint firstItem="IZe-cK-yao" firstAttribute="top" secondItem="TTa-P2-Taw" secondAttribute="bottom" id="4wU-Hq-S8f"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="TTa-P2-Taw" secondAttribute="trailing" constant="9" id="Gso-SN-iIa"/>
+                                            <constraint firstItem="IZe-cK-yao" firstAttribute="bottom" secondItem="kZ7-rA-4y2" secondAttribute="bottomMargin" id="K9B-Bw-SIU"/>
+                                            <constraint firstItem="TTa-P2-Taw" firstAttribute="top" secondItem="kZ7-rA-4y2" secondAttribute="topMargin" id="Rme-gY-Q7q"/>
+                                            <constraint firstItem="IZe-cK-yao" firstAttribute="leading" secondItem="kZ7-rA-4y2" secondAttribute="leadingMargin" id="n5l-7a-2rR"/>
+                                            <constraint firstItem="TTa-P2-Taw" firstAttribute="leading" secondItem="kZ7-rA-4y2" secondAttribute="leadingMargin" constant="9" id="pY5-Yi-8WG"/>
+                                            <constraint firstItem="IZe-cK-yao" firstAttribute="trailing" secondItem="kZ7-rA-4y2" secondAttribute="trailingMargin" id="qMf-Sw-Bkd"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="characterName" destination="IZe-cK-yao" id="cRa-rw-QPM"/>
@@ -294,10 +298,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="133" height="148"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rvq-Ek-lrE">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rvq-Ek-lrE">
                                                     <rect key="frame" x="8" y="8" width="117" height="111"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Rvq-Ek-lrE" secondAttribute="height" multiplier="39:37" id="VwI-HW-zxY"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ju8-0J-j69">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Ju8-0J-j69">
                                                     <rect key="frame" x="8" y="119" width="116" height="29"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="29" id="Gcu-Hu-kEF"/>
