--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -6,11 +6,6 @@
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </mutableArray>
-    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -441,15 +436,13 @@
                                                             <constraint firstAttribute="height" relation="lessThanOrEqual" constant="300" id="OIK-dQ-VT0"/>
                                                         </constraints>
                                                     </imageView>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="08f-Pa-PaB">
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="EBM-tp-9GN">
                                                         <rect key="frame" x="302" y="0.0" width="298" height="295"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="300" id="eOo-AY-wOy"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
+                                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                        <color key="textColor" white="1" alpha="0.89148706896551722" colorSpace="calibratedWhite"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    </textView>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DL-Sg-msM">
@@ -538,7 +531,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="CLh-Ky-0LZ" id="Xv3-PF-vrh"/>
-                        <outlet property="comixDescription" destination="08f-Pa-PaB" id="GGn-vR-1yt"/>
+                        <outlet property="comixDescription" destination="EBM-tp-9GN" id="iNP-oW-ugr"/>
                         <outlet property="comixThumb" destination="S8K-eN-Yq9" id="TJ7-ht-6wa"/>
                         <outlet property="comixTitle" destination="cLf-Ne-cSb" id="KaB-5H-qTF"/>
                         <segue destination="0Q3-EB-6qr" kind="show" identifier="bigScreenShot" id="pz8-qO-gFg"/>
