--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -173,81 +173,77 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XTm-n6-ggb">
-                                <rect key="frame" x="102" y="122" width="397" height="355"/>
+                                <rect key="frame" x="36" y="94" width="528" height="478"/>
                                 <subviews>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="u6l-I3-vk9">
-                                        <rect key="frame" x="6" y="83" width="385" height="31"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="30" id="wcC-cC-sQf"/>
-                                        </constraints>
-                                        <connections>
-                                            <action selector="sliderChangedValue:" destination="EsT-Is-PBI" eventType="valueChanged" id="Qyr-bw-VZR"/>
-                                        </connections>
-                                    </slider>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Characters first letter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="i5t-r4-8WV">
-                                        <rect key="frame" x="8" y="188" width="381" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="xOZ-kb-wbC"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2nG-PQ-Q56">
-                                        <rect key="frame" x="8" y="136" width="381" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="eV2-9n-OFC"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4xt-Hz-FqJ">
-                                        <rect key="frame" x="8" y="247" width="381" height="70"/>
-                                        <connections>
-                                            <outlet property="dataSource" destination="EsT-Is-PBI" id="lJF-Fe-GAy"/>
-                                            <outlet property="delegate" destination="EsT-Is-PBI" id="BdP-ro-8Cd"/>
-                                        </connections>
-                                    </pickerView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of characters per letter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Bq0-Z5-JC3">
-                                        <rect key="frame" x="8" y="25" width="381" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="21" id="xNj-Xy-wr2"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" distribution="fillProportionally" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="VBk-8p-ssu">
+                                        <rect key="frame" x="4" y="29" width="508" height="452"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Number of characters per letter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Bq0-Z5-JC3">
+                                                <rect key="frame" x="0.0" y="0.0" width="508" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="40" id="TLL-qi-ekG"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <slider opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="1" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="u6l-I3-vk9">
+                                                <rect key="frame" x="-2" y="33" width="512" height="43"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="i4z-ZC-2Le"/>
+                                                </constraints>
+                                                <connections>
+                                                    <action selector="sliderChangedValue:" destination="EsT-Is-PBI" eventType="valueChanged" id="Qyr-bw-VZR"/>
+                                                </connections>
+                                            </slider>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2nG-PQ-Q56">
+                                                <rect key="frame" x="0.0" y="78" width="508" height="29"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="uXZ-l8-3Cj"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Characters first letter" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="i5t-r4-8WV">
+                                                <rect key="frame" x="0.0" y="110" width="508" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="JeF-3y-Er3"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <pickerView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4xt-Hz-FqJ">
+                                                <rect key="frame" x="0.0" y="143" width="508" height="309"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="120" id="Phx-KR-enY"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="EsT-Is-PBI" id="lJF-Fe-GAy"/>
+                                                    <outlet property="delegate" destination="EsT-Is-PBI" id="BdP-ro-8Cd"/>
+                                                </connections>
+                                            </pickerView>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="i5t-r4-8WV" firstAttribute="top" secondItem="2nG-PQ-Q56" secondAttribute="bottom" constant="31" id="1bf-IZ-fe1"/>
-                                    <constraint firstItem="Bq0-Z5-JC3" firstAttribute="leading" secondItem="u6l-I3-vk9" secondAttribute="leading" id="1ns-lo-5k1"/>
-                                    <constraint firstItem="2nG-PQ-Q56" firstAttribute="trailing" secondItem="i5t-r4-8WV" secondAttribute="trailing" id="3YI-p2-QYG"/>
-                                    <constraint firstItem="4xt-Hz-FqJ" firstAttribute="top" secondItem="i5t-r4-8WV" secondAttribute="bottom" constant="38" id="A2J-Ja-CCB"/>
-                                    <constraint firstItem="i5t-r4-8WV" firstAttribute="leading" secondItem="4xt-Hz-FqJ" secondAttribute="leading" id="DSh-Ie-AMm"/>
-                                    <constraint firstItem="i5t-r4-8WV" firstAttribute="leading" secondItem="XTm-n6-ggb" secondAttribute="leadingMargin" id="Qdh-Ya-2NY"/>
-                                    <constraint firstItem="2nG-PQ-Q56" firstAttribute="leading" secondItem="i5t-r4-8WV" secondAttribute="leading" id="RbL-63-NGC"/>
-                                    <constraint firstItem="2nG-PQ-Q56" firstAttribute="top" secondItem="u6l-I3-vk9" secondAttribute="bottom" constant="23" id="Zuk-29-d9W"/>
-                                    <constraint firstItem="2nG-PQ-Q56" firstAttribute="trailing" secondItem="XTm-n6-ggb" secondAttribute="trailingMargin" id="dpm-gZ-sfa"/>
-                                    <constraint firstItem="u6l-I3-vk9" firstAttribute="trailing" secondItem="2nG-PQ-Q56" secondAttribute="trailing" id="gEu-k8-hqV"/>
-                                    <constraint firstItem="Bq0-Z5-JC3" firstAttribute="top" secondItem="XTm-n6-ggb" secondAttribute="top" constant="25" id="gXv-hZ-uDu"/>
-                                    <constraint firstAttribute="bottom" secondItem="4xt-Hz-FqJ" secondAttribute="bottom" constant="38" id="iat-fM-DoC"/>
-                                    <constraint firstItem="2nG-PQ-Q56" firstAttribute="leading" secondItem="u6l-I3-vk9" secondAttribute="leading" id="irJ-bg-p0o"/>
-                                    <constraint firstItem="u6l-I3-vk9" firstAttribute="trailing" secondItem="Bq0-Z5-JC3" secondAttribute="trailing" id="k9E-tv-Ju6"/>
-                                    <constraint firstItem="u6l-I3-vk9" firstAttribute="top" secondItem="Bq0-Z5-JC3" secondAttribute="bottom" constant="37" id="m8g-p8-kst"/>
-                                    <constraint firstItem="4xt-Hz-FqJ" firstAttribute="trailing" secondItem="i5t-r4-8WV" secondAttribute="trailing" id="z2b-DC-wbs"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="VBk-8p-ssu" secondAttribute="trailing" constant="2" id="LuR-7q-RY9"/>
+                                    <constraint firstItem="VBk-8p-ssu" firstAttribute="top" secondItem="XTm-n6-ggb" secondAttribute="topMargin" constant="5" id="UhC-oK-fu2"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="VBk-8p-ssu" secondAttribute="bottom" constant="5" id="WpT-vd-TNg"/>
+                                    <constraint firstItem="VBk-8p-ssu" firstAttribute="leading" secondItem="XTm-n6-ggb" secondAttribute="leadingMargin" constant="2" id="kJJ-xV-4zS"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="XTm-n6-ggb" firstAttribute="leading" secondItem="XPu-JN-3zO" secondAttribute="leadingMargin" constant="82" id="4U4-S7-qXf"/>
-                            <constraint firstItem="XTm-n6-ggb" firstAttribute="top" secondItem="Czx-9a-TTB" secondAttribute="bottom" constant="58" id="CTg-1x-abe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XTm-n6-ggb" secondAttribute="trailing" constant="16" id="0x5-eu-TnF"/>
+                            <constraint firstItem="XTm-n6-ggb" firstAttribute="top" secondItem="Czx-9a-TTB" secondAttribute="bottom" constant="30" id="9oX-nQ-5mD"/>
                             <constraint firstItem="8TI-yx-tz7" firstAttribute="top" secondItem="XPu-JN-3zO" secondAttribute="top" id="UKC-8d-Y9h"/>
                             <constraint firstAttribute="trailing" secondItem="8TI-yx-tz7" secondAttribute="trailing" id="VmL-mn-LDC"/>
-                            <constraint firstItem="XTm-n6-ggb" firstAttribute="centerY" secondItem="8TI-yx-tz7" secondAttribute="centerY" id="cxp-16-1ac"/>
-                            <constraint firstItem="XTm-n6-ggb" firstAttribute="centerX" secondItem="8TI-yx-tz7" secondAttribute="centerX" id="gAr-gg-y5T"/>
+                            <constraint firstItem="Zgn-IU-t4u" firstAttribute="top" secondItem="XTm-n6-ggb" secondAttribute="bottom" constant="28" id="YVM-Vj-xBh"/>
+                            <constraint firstItem="XTm-n6-ggb" firstAttribute="leading" secondItem="XPu-JN-3zO" secondAttribute="leadingMargin" constant="16" id="kFs-Ac-JC1"/>
                             <constraint firstItem="8TI-yx-tz7" firstAttribute="leading" secondItem="XPu-JN-3zO" secondAttribute="leading" id="lqj-RS-181"/>
                             <constraint firstItem="Zgn-IU-t4u" firstAttribute="top" secondItem="8TI-yx-tz7" secondAttribute="bottom" id="zcp-S5-14j"/>
                         </constraints>
