change constraint in landscape mode for settings

--- a/MarvelDatabase/Base.lproj/Main.storyboard
+++ b/MarvelDatabase/Base.lproj/Main.storyboard
@@ -234,10 +234,22 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4xt-Hz-FqJ">
-                                        <rect key="frame" x="8" y="279" width="512" height="80"/>
+                                        <rect key="frame" x="8" y="259" width="512" height="120"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="80" id="Phx-KR-enY"/>
+                                            <constraint firstAttribute="height" constant="120" id="Phx-KR-enY"/>
+                                            <constraint firstAttribute="height" constant="80" id="fvW-st-yfd"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="fvW-st-yfd"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=compact">
+                                            <mask key="constraints">
+                                                <exclude reference="Phx-KR-enY"/>
+                                                <include reference="fvW-st-yfd"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <outlet property="dataSource" destination="EsT-Is-PBI" id="lJF-Fe-GAy"/>
                                             <outlet property="delegate" destination="EsT-Is-PBI" id="BdP-ro-8Cd"/>
@@ -502,7 +514,7 @@
                                         <rect key="frame" x="308" y="41" width="284" height="295"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" white="1" alpha="0.89148706896551722" colorSpace="calibratedWhite"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CLh-Ky-0LZ">
